@@ -52,6 +52,23 @@
             <value> <string></string> </value>
         </item>
         <item>
+            <key> <string>searchable_text_property_id</string> </key>
+            <value>
+              <tuple>
+                <string>title</string>
+                <string>description</string>
+                <string>comment</string>
+                <string>reference</string>
+                <string>source_reference</string>
+                <string>destination_reference</string>
+                <string>source_section_title</string>
+                <string>destination_section_title</string>
+                <string>start_date</string>
+                <string>stop_date</string>
+              </tuple>
+            </value>
+        </item>
+        <item>
             <key> <string>title</string> </key>
             <value> <string></string> </value>
         </item>
