@@ -1,3 +1,6 @@
+2011-04-04 Kazuhiko
+* configure searchable text property ids for Amortisation Transaction.
+
 2008-10-8 yusei
 * Update xml format.
 
